--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -14,6 +14,7 @@
 {% endblock content %}
 
 {% block extra_js %}
+{{ block.super }}
 <script src="https://d3js.org/d3.v7.min.js"></script>
 <script>
 	document.addEventListener('DOMContentLoaded', function () {
